--- a/Frontend/HotelProject.WebUI/Views/Staff/AddStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Staff/AddStaff.cshtml
@@ -5,10 +5,10 @@
 }
 
 <form method="post">
-    <label>Personal Name</label>
+    <label>Staff Name</label>
     <input type="text" asp-for="Name" class="form-control" />
     <br />
-    <label>Personal Title</label>
+    <label>Staff Title</label>
     <input type="text" asp-for="Title" class="form-control" />
     <br />
     <label>Social Media 1</label>
@@ -20,5 +20,5 @@
     <label>Social Media 3</label>
     <input type="text" asp-for="SocialMedia3" class="form-control" />
     <br />
-    <button class="btn btn-primary">Add Personal</button>
+    <button class="btn btn-primary">Add Staff</button>
 </form>
