--- a/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
@@ -7,8 +7,8 @@
 <table class="table table-bordered">
     <tr>
         <th>#</th>
-        <th>Personal Name</th>
-        <th>Personal Title</th>
+        <th>Staff Name</th>
+        <th>Staff Title</th>
         <th>Delete</th>
         <th>Update</th>
         <th>Details</th>
@@ -25,4 +25,4 @@
         </tr>
     }
 </table>
-<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-info">Add New Personal</a>
+<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-info">Add New Staff</a>
