--- a/Frontend/HotelProject.WebUI/Views/Staff/UpdateStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Staff/UpdateStaff.cshtml
@@ -7,10 +7,10 @@
 
 <form method="post">
     <input type="hidden" asp-for="StaffID" />
-    <label>Personal Name</label>
+    <label>Staff Name</label>
     <input type="text" asp-for="Name" class="form-control" />
     <br />
-    <label>Personal Title</label>
+    <label>Staff Title</label>
     <input type="text" asp-for="Title" class="form-control" />
     <br />
     <label>Social Media 1</label>
@@ -22,5 +22,5 @@
     <label>Social Media 3</label>
     <input type="text" asp-for="SocialMedia3" class="form-control" />
     <br />
-    <button class="btn btn-outline-success">Update Personal</button>
+    <button class="btn btn-outline-success">Update Staff</button>
 </form>
