--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using HotelProject.WebUI.Models.Staff
 @using HotelProject.WebUI.Models.Testimonial
 @using HotelProject.WebUI.DTOs.ServiceDto
+@using HotelProject.WebUI.DTOs.RegisterDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
