--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using HotelProject.WebUI.Models.Testimonial
 @using HotelProject.WebUI.DTOs.ServiceDto
 @using HotelProject.WebUI.DTOs.RegisterDto
+@using HotelProject.WebUI.DTOs.LoginDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
