about entity created and configs made also added to frontend

--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using HotelProject.WebUI.DTOs.ServiceDto
 @using HotelProject.WebUI.DTOs.RegisterDto
 @using HotelProject.WebUI.DTOs.LoginDto
+@using HotelProject.WebUI.DTOs.AboutDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
