Room details done

--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using HotelProject.WebUI.DTOs.RegisterDto
 @using HotelProject.WebUI.DTOs.LoginDto
 @using HotelProject.WebUI.DTOs.AboutDto
+@using HotelProject.WebUI.DTOs.RoomDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
