--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -7,4 +7,6 @@
 @using HotelProject.WebUI.DTOs.LoginDto
 @using HotelProject.WebUI.DTOs.AboutDto
 @using HotelProject.WebUI.DTOs.RoomDto
+@using HotelProject.WebUI.DTOs.TestimonialDto
+@using HotelProject.WebUI.DTOs.StaffDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
