--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
@@ -5,14 +5,14 @@
                 <div class="bg-primary rounded p-4">
                     <a href="~/hotel-html-template/index.html"><h1 class="text-white text-uppercase mb-3">Hotelier</h1></a>
                     <p class="text-white mb-0">
-                        Download <a class="text-dark fw-medium" href="https://htmlcodex.com/hotel-html-template-pro">Hotelier – Premium Version</a>, build a professional website for your hotel business and grab the attention of new visitors upon your site’s launch.
+                        Asp.Net Core Api Based Online Rezervation App. Developer:Arda İlhan
                     </p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
                 <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Bagdat Caddesi, Kadıköy/İstanbul, Türkiye</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+90 345 67890</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -47,9 +47,8 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; All Right Reserved. @DateTime.Now.Year
 
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                     Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
