--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -9,4 +9,5 @@
 @using HotelProject.WebUI.DTOs.RoomDto
 @using HotelProject.WebUI.DTOs.TestimonialDto
 @using HotelProject.WebUI.DTOs.StaffDto
+@using HotelProject.WebUI.DTOs.BookingDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
