--- a/Frontend/HotelProject.WebUI/Views/BookingAdmin/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/BookingAdmin/Index.cshtml
@@ -20,6 +20,11 @@
                             <th>Checkin</th>
                             <th>Checkout</th>
                             <th>Status</th>
+                            <th>Approve</th>
+                            <th>Cancel</th>
+                            <th>Pend</th>
+                            <th>Update</th>
+                            <th>Details</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -29,10 +34,10 @@
                             <tr>
                                 <th>@count</th>
                                 <td>@item.Name</td>
-                                <td>@item.Checkin</td>
-                                <td>@item.Checkout</td>
+                                <td>@(((DateTime)item.Checkin).ToString("dd-MMM-yyyy"))</td>
+                                <td>@(((DateTime)item.Checkout).ToString("dd-MMM-yyyy"))</td>
                                 <td><span class="badge badge-primary px-2">@item.Status</span></td>
-                                <td><a href="#" class="btn btn-outline-primary">Approve</a></td>
+                                <td><a href="/BookingAdmin/ApprovedReservation/@item.BookingID" class="btn btn-outline-primary">Approve</a></td>
                                 <td><a href="#" class="btn btn-outline-danger">Cancel</a></td>
                                 <td><a href="#" class="btn btn-outline-warning">Pend</a></td>
                                 <td><a href="#" class="btn btn-outline-info">Update</a></td>
