Contact entity added and consumed UI configs done.

--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -36,20 +36,11 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="/Default/Index/" class="nav-item nav-link active">Home</a>
-                        <a href="~/hotel-html-template/about.html" class="nav-item nav-link">About</a>
-                        <a href="~/hotel-html-template/service.html" class="nav-item nav-link">Services</a>
-                        <a href="~/hotel-html-template/room.html" class="nav-item nav-link">Rooms</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu rounded-0 m-0">
-                                <a href="~/hotel-html-template/booking.html" class="dropdown-item">Booking</a>
-                                <a href="~/hotel-html-template/team.html" class="dropdown-item">Our Team</a>
-                                <a href="~/hotel-html-template/testimonial.html" class="dropdown-item">Comments</a>
-                            </div>
-                        </div>
-                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">Contact</a>
-                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">Help</a>
+                        <a href="/Default/Index/" class="nav-item nav-link active">HOME</a>
+                        <a href="/Booking/Index/" class="nav-item nav-link">MAKE RESERVATION</a>
+                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">CONTACT</a>
+                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">SUPPORT</a>
+                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">LOGIN</a>
                     </div>
                 </div>
             </nav>
