--- a/Frontend/HotelProject.WebUI/Views/Contact/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Contact/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -14,9 +13,9 @@
 
         @await Component.InvokeAsync("_NavbarPartial")
 
-        @await Component.InvokeAsync("_BookingCoverPartial")
+        @await Component.InvokeAsync("_ContactCoverPartial")
 
-        @await Html.PartialAsync("/Views/Booking/AddBooking.cshtml")
+        @await Html.PartialAsync("/Views/Contact/SendMessage.cshtml")
 
         @await Html.PartialAsync("/Views/Default/_SubscribePartial.cshtml")
 
