--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -10,4 +10,5 @@
 @using HotelProject.WebUI.DTOs.TestimonialDto
 @using HotelProject.WebUI.DTOs.StaffDto
 @using HotelProject.WebUI.DTOs.BookingDto
+@using HotelProject.WebUI.DTOs.ContactDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
