--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -38,9 +38,9 @@
                     <div class="navbar-nav mr-auto py-0">
                         <a href="/Default/Index/" class="nav-item nav-link active">HOME</a>
                         <a href="/Booking/Index/" class="nav-item nav-link">MAKE RESERVATION</a>
-                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">CONTACT</a>
+                        <a href="/Contact/Index/" class="nav-item nav-link">CONTACT</a>
                         <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">SUPPORT</a>
-                        <a href="~/hotel-html-template/contact.html" class="nav-item nav-link">LOGIN</a>
+                        <a href="/Login/Index/" class="nav-item nav-link">LOGIN</a>
                     </div>
                 </div>
             </nav>
