--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -21,6 +21,11 @@
                     <i class="icon-info menu-icon"></i><span class="nav-text">About Us</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminRoom/Index/" aria-expanded="false">
+                    <i class="icon-home menu-icon"></i><span class="nav-text">Rooms</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
