--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -11,4 +11,5 @@
 @using HotelProject.WebUI.DTOs.StaffDto
 @using HotelProject.WebUI.DTOs.BookingDto
 @using HotelProject.WebUI.DTOs.ContactDto
+@using HotelProject.WebUI.DTOs.GuestDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
