--- a/Frontend/HotelProject.WebUI/Views/Guest/AddGuest.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Guest/AddGuest.cshtml
@@ -7,12 +7,15 @@
 <form method="post">
     <label>Guest Name</label>
     <input type="text" asp-for="Name" class="form-control" />
+    <span asp-validation-for="Name" class="text-danger"></span>
     <br />
     <label>Guest Surname</label>
     <input type="text" asp-for="Surname" class="form-control" />
+    <span asp-validation-for="Surname" class="text-danger"></span>
     <br />
     <label>Guest City</label>
     <input type="text" asp-for="City" class="form-control" />
+    <span asp-validation-for="City" class="text-danger"></span>
     <br />
     <button class="btn btn-primary">Add Guest
     </button>
