--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -31,6 +31,11 @@
                     <i class="icon-people menu-icon"></i><span class="nav-text">Guests</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminContact/Inbox/" aria-expanded="false">
+                    <i class="icon-envelope menu-icon"></i><span class="nav-text">Messages</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
