--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -12,4 +12,5 @@
 @using HotelProject.WebUI.DTOs.BookingDto
 @using HotelProject.WebUI.DTOs.ContactDto
 @using HotelProject.WebUI.DTOs.GuestDto
+@using HotelProject.WebUI.DTOs.SendMessageDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
