--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -13,4 +13,5 @@
 @using HotelProject.WebUI.DTOs.ContactDto
 @using HotelProject.WebUI.DTOs.GuestDto
 @using HotelProject.WebUI.DTOs.SendMessageDto
+@using HotelProject.WebUI.Models.Mail
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
