--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -37,8 +37,18 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminContact/Inbox/" aria-expanded="false">
-                    <i class="icon-card menu-icon"></i><span class="nav-text">Mail</span>
+                <a href="/AdminMail/Inbox/" aria-expanded="false">
+                    <i class="icon-paper-clip menu-icon"></i><span class="nav-text">Mail</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminImageFile/Index/" aria-expanded="false">
+                    <i class="icon-energy menu-icon"></i><span class="nav-text">Image Upload</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminFile/Index/" aria-expanded="false">
+                    <i class="icon-film menu-icon"></i><span class="nav-text">File Upload</span>
                 </a>
             </li>
         </ul>
