--- a/Frontend/HotelProject.WebUI/Views/Contact/SendMessage.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Contact/SendMessage.cshtml
@@ -49,6 +49,11 @@
                                     <input type="text" class="form-control" id="subject" placeholder="Subject" name="Subject">
                                     <label for="subject">Subject</label>
                                 </div>
+                                <br />
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="subject" placeholder="Subject Title" name="Subject">
+                                    <label for="subject">SubjectTitle</label>
+                                </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
