--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -51,6 +51,11 @@
                     <i class="icon-film menu-icon"></i><span class="nav-text">File Upload</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminUsers/Index/" aria-expanded="false">
+                    <i class="icon-speech menu-icon"></i><span class="nav-text">Users</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
