--- a/Frontend/HotelProject.WebUI/Views/Register/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Register/Index.cshtml
@@ -40,7 +40,7 @@
                         <div class="card login-form mb-0">
                             <div class="card-body pt-5">
 
-                                <a class="text-center" href="index.html"> <h4>Hotel Login Page</h4></a>
+                                <a class="text-center" href="index.html"> <h4>Hotel Sign Up Page</h4></a>
 
                                 <form class="mt-5 mb-5 login-input" method="post">
                                     <div class="form-group">
@@ -55,10 +55,10 @@
                                         <input type="text" class="form-control" placeholder="Username" asp-for="Username">
                                         <span asp-validation-for="Username" class="text-warning"></span>
                                     </div>
-                                    <div class="form-group">
+                                  @*  <div class="form-group">
                                         <input type="text" class="form-control" placeholder="City" asp-for="City">
                                         <span asp-validation-for="City" class="text-warning"></span>
-                                    </div>
+                                    </div>*@
                                     <div class="form-group">
                                         <input type="email" class="form-control" placeholder="Email" asp-for="Mail">
                                         <span asp-validation-for="Mail" class="text-warning"></span>
@@ -71,9 +71,9 @@
                                         <input type="password" class="form-control" placeholder="Confirm Password" asp-for="ConfirmPassword">
                                         <span asp-validation-for="ConfirmPassword" class="text-warning"></span>
                                     </div>
-                                    <button class="btn login-form__btn submit w-100">Sign in</button>
+                                    <button class="btn login-form__btn submit w-100">Sign Up</button>
                                 </form>
-                                <p class="mt-5 login-form__footer">Have account ?<a href="/Login/Index/" class="text-primary">Sign Up </a> now</p>
+                                <p class="mt-5 login-form__footer">Have account ?<a href="/Login/Index/" class="text-primary">Sign In </a> now</p>
                             </div>
                         </div>
                     </div>
