--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -2,6 +2,16 @@
     <div class="nk-nav-scroll">
         <ul class="metismenu" id="menu">
             <li>
+                <a href="/Default/Index/" aria-expanded="false">
+                    <i class="icon-rocket menu-icon"></i><span class="nav-text">Go to Site</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Staff/Index/" aria-expanded="false">
+                    <i class="icon-trophy menu-icon"></i><span class="nav-text">Dashboard</span>
+                </a>
+            </li>
+            <li>
                 <a href="/Staff/Index/" aria-expanded="false">
                     <i class="icon-notebook menu-icon"></i><span class="nav-text">Staffs</span>
                 </a>
@@ -54,6 +64,26 @@
             <li>
                 <a href="/AdminUsers/Index/" aria-expanded="false">
                     <i class="icon-speech menu-icon"></i><span class="nav-text">Users</span>
+                </a>
+            </li>
+            <li>
+                <a href="/WorkLocation/Index/" aria-expanded="false">
+                    <i class="icon-puzzle menu-icon"></i><span class="nav-text">Hotel Locations</span>
+                </a>
+            </li>
+            <li>
+                <a href="/WorkLocation/Index/" aria-expanded="false">
+                    <i class="icon-game-controller menu-icon"></i><span class="nav-text">User Roles</span>
+                </a>
+            </li>
+            <li>
+                <a href="/WorkLocation/Index/" aria-expanded="false">
+                    <i class="icon-settings menu-icon"></i><span class="nav-text">Settings</span>
+                </a>
+            </li>
+            <li>
+                <a href="/WorkLocation/Index/" aria-expanded="false">
+                    <i class="icon-close menu-icon"></i><span class="nav-text">Log Out</span>
                 </a>
             </li>
         </ul>
