--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminUsers/Index/" aria-expanded="false">
+                <a href="/AdminUsers/UserList/" aria-expanded="false">
                     <i class="icon-speech menu-icon"></i><span class="nav-text">Users</span>
                 </a>
             </li>
