City and Country properties added to booking entity

--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardLast6Bookings/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardLast6Bookings/Default.cshtml
@@ -19,9 +19,9 @@
                                 {
                                     <tr>
                                         <td>>@item.Name</td>
-                                        <td>City</td>
+                                        <td>@item.City</td>
                                         <td>
-                                            <span>Country</span>
+                                            <span>@item.Country</span>
                                         </td>
                                         @if (item.Status == "Approved")
                                         {
