--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardSubscribeCountPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardSubscribeCountPartial/Default.cshtml
@@ -1,25 +1,5 @@
-﻿<div class="row">
-    <div class="col-lg-3 col-sm-6">
-        <div class="card">
-            <div class="social-graph-wrapper widget-facebook">
-                <span class="s-icon"><i class="fa fa-facebook"></i></span>
-            </div>
-            <div class="row">
-                <div class="col-6 border-right">
-                    <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
-                        <p class="m-0">Friends</p>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
-                        <p class="m-0">Followers</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+﻿@model HotelProject.WebUI.DTOs.FollowersDto.ResultInstagramFollowersDto
+<div class="row">
     <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="social-graph-wrapper widget-linkedin">
@@ -28,13 +8,13 @@
             <div class="row">
                 <div class="col-6 border-right">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
+                        <h4 class="m-1">500++</h4>
                         <p class="m-0">Friends</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
+                        <h4 class="m-1">@ViewBag.v3</h4>
                         <p class="m-0">Followers</p>
                     </div>
                 </div>
@@ -44,39 +24,18 @@
     <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="social-graph-wrapper widget-googleplus">
-                <span class="s-icon"><i class="fa fa-google-plus"></i></span>
+                <span class="s-icon">Instagram</span>
             </div>
             <div class="row">
                 <div class="col-6 border-right">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
-                        <p class="m-0">Friends</p>
+                        <h4 class="m-1">@ViewBag.v2</h4>
+                        <p class="m-0">Following</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
-                        <p class="m-0">Followers</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-6">
-        <div class="card">
-            <div class="social-graph-wrapper widget-twitter">
-                <span class="s-icon"><i class="fa fa-twitter"></i></span>
-            </div>
-            <div class="row">
-                <div class="col-6 border-right">
-                    <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
-                        <p class="m-0">Friends</p>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
+                        <h4 class="m-1">@ViewBag.v1</h4>
                         <p class="m-0">Followers</p>
                     </div>
                 </div>
