roles and role assignment configs done

--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -72,12 +72,17 @@
                 </a>
             </li>
             <li>
-                <a href="/WorkLocation/Index/" aria-expanded="false">
+                <a href="/Role/Index/" aria-expanded="false">
                     <i class="icon-game-controller menu-icon"></i><span class="nav-text">User Roles</span>
                 </a>
             </li>
             <li>
-                <a href="/WorkLocation/Index/" aria-expanded="false">
+                <a href="/RoleAssign/Index/" aria-expanded="false">
+                    <i class="icon-speedometer menu-icon"></i><span class="nav-text">Role Assign</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Settings/Index/" aria-expanded="false">
                     <i class="icon-settings menu-icon"></i><span class="nav-text">Settings</span>
                 </a>
             </li>
