--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -17,6 +17,11 @@
                 </a>
             </li>
             <li>
+                <a href="/BookingAdmin/Index/" aria-expanded="false">
+                    <i class="icon-calender menu-icon"></i><span class="nav-text">Bookings</span>
+                </a>
+            </li>
+            <li>
                 <a href="/Testimonial/Index/" aria-expanded="false">
                     <i class="icon-lock menu-icon"></i><span class="nav-text">Testimonials</span>
                 </a>
