--- a/Frontend/HotelProject.WebUI/Views/BookingAdmin/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/BookingAdmin/Index.cshtml
@@ -37,11 +37,11 @@
                                 <td>@(((DateTime)item.Checkin).ToString("dd-MMM-yyyy"))</td>
                                 <td>@(((DateTime)item.Checkout).ToString("dd-MMM-yyyy"))</td>
                                 <td><span class="badge badge-primary px-2">@item.Status</span></td>
-                                <td><a href="/BookingAdmin/ApprovedReservation2/@item.BookingID" class="btn btn-outline-primary">Approve</a></td>
-                                <td><a href="#" class="btn btn-outline-danger">Cancel</a></td>
-                                <td><a href="#" class="btn btn-outline-warning">Pend</a></td>
-                                <td><a href="#" class="btn btn-outline-info">Update</a></td>
-                                <td><a href="#" class="btn btn-outline-dark">Details</a></td>
+                                <td><a href="/BookingAdmin/ApprovedReservation/@item.BookingID" class="btn btn-outline-primary">Approve</a></td>
+                                <td><a href="/BookingAdmin/CancelBooking/@item.BookingID" class="btn btn-outline-danger">Cancel</a></td>
+                                <td><a href="/BookingAdmin/PendBooking/@item.BookingID" class="btn btn-outline-warning">Pend</a></td>
+                                <td><a href="/BookingAdmin/UpdateBooking/@item.BookingID" class="btn btn-outline-info">Update</a></td>
+                                <td><a href="/BookingAdmin/UpdateBooking/@item.BookingID" class="btn btn-outline-dark">Details</a></td>
                             </tr>
                         }
                     </tbody>
